# raytracer-challenge

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
libraytracer/libraytracer/: canvas.cpp  canvas.h  colours.cpp  colours.h  intersection.cpp  intersection.h  lighting.cpp  lighting.h  materials.cpp  materials.h  matrix.h  matrix_2d.cpp  matrix_2d.h  rays.cpp  rays.h  shapes.cpp  shapes.h  sphere.h  tuples.cpp  tuples.h  utils.h  world.cpp  world.h
libraytracer/tests/: CMakeLists.txt  test_canvas.cpp  test_colours.cpp  test_lighting.cpp  test_materials.cpp  test_matrix.cpp  test_matrix_2d.cpp  test_rays.cpp  test_shapes.cpp  test_spheres.cpp  test_tuples.cpp  test_world.cpp
raytracer/raytracer/: main.cpp
src/: makefile
src/tests/: tests.cpp
